<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CadastroEnderecoActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_bebe_claro"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titleEnderecoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_bebe_escuro"
            android:fontFamily="@font/commissioner_extrabold"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/cadastro"
            android:textColor="#2C013B"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/btn_entrar"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/botao_design"
            android:fontFamily="@font/commissioner_semibold"
            android:text="@string/enviar"
            android:textColor="@color/roxo_texto"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/errorTextView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/commissioner_semibold"
            android:text="@string/textview_informacoes_do_endereco"
            android:textColor="@color/roxo_texto"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEnderecoTextView" />

        <android.widget.EditText
            android:id="@+id/editTextCnpj"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/editText_logradouro"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomeClinica" />

        <android.widget.EditText
            android:id="@+id/editTextSenha"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/editText_numero"
            android:inputType="text|number"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextRazaoSocial" />

        <android.widget.EditText
            android:id="@+id/editTextComplemento"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/complemento"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextSenha" />

        <android.widget.EditText
            android:id="@+id/editTextRazaoSocial"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/uf"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />

        <android.widget.EditText
            android:id="@+id/editTextTelefone"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/cidade"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <android.widget.EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/bairro"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextCnpj" />

        <android.widget.EditText
            android:id="@+id/editTextNomeClinica"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/cep"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/commissioner"
            android:textColor="#F44E4E"
            android:textColorHint="#F44E4E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_entrar"
            app:layout_constraintStart_toStartOf="@+id/btn_entrar"
            app:layout_constraintTop_toBottomOf="@+id/editTextComplemento"
            tools:text="@string/textview_dados_invalidos" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/botao_voltar"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/titleEnderecoTextView"
            app:layout_constraintStart_toStartOf="@+id/titleEnderecoTextView"
            app:layout_constraintTop_toTopOf="@+id/titleEnderecoTextView"
            app:srcCompat="@drawable/arrow_back_24px"
            app:tint="@color/roxo_texto"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
