<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_bebe_claro"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_bebe_escuro"
            android:fontFamily="@font/commissioner_extrabold"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/cadastro"
            android:textColor="#2C013B"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/botao_design"
            android:fontFamily="@font/commissioner_semibold"
            android:text="@string/avancar"
            android:textColor="@color/roxo_texto"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/errorTextView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/commissioner_semibold"
            android:text="@string/textview_preencha_os_campos_abaixo"
            android:textColor="@color/roxo_texto"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

        <android.widget.EditText
            android:id="@+id/editTextCNPJ"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/editText_usuario"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomeClinica" />

        <android.widget.EditText
            android:id="@+id/editTextSenha"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/editText_senha"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextRazaoSocial" />

        <android.widget.EditText
            android:id="@+id/editTextRazaoSocial"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/razao_social"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />

        <android.widget.EditText
            android:id="@+id/editTextTelefone"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/telefone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <android.widget.EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNomeClinica"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeClinica"
            app:layout_constraintTop_toBottomOf="@+id/editTextCNPJ" />

        <android.widget.EditText
            android:id="@+id/editTextNomeClinica"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/botao_design2"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/nome_clinica"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="@color/cinza_claro"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/commissioner"
            android:textColor="#F44E4E"
            android:textColorHint="#F44E4E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
            tools:text="@string/textview_dados_invalidos" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
